2004-10-28  Werner Lemberg  <wl@gnu.org>

	* Documentation/user/music-glossary.tely: More fixes to improve
	appearance with DVI output.

	* scripts/lilypond-book.py (compose_ly): Use 0.4in for
	EXAMPLEINDENT.  This is the maximum value for quotation environments
	used in `texinfo.tex' -- many warnings in lilypond.dvi are now gone.

2004-10-27  Werner Lemberg  <wl@gnu.org>

	* Documentation/user/music-glossary.tely: Revised.

2004-10-26  Carl Sorensen  <carldsorensen@comcast.net>

	* input/test/fret-diagram.ly: insert breaks, remove raggedright to
	improve fret diagram spacing in printed output.

	* Documentation/user/notation.itely (Fret diagrams): Remove raggedright
	from options for the example so fret-diagrams won't overlap
	one another.

2004-10-26  Werner Lemberg  <wl@gnu.org>

	* scripts/lilypond-book.py: Some additional formatting for
	orthogonality.
	(ly_options) [*]: Format strings.
	[RAGGEDRIGHT]: Don't set `indent'.  This is now properly handled
	by `compose_ly'.
	(output) [LATEX][OUTPUT]: Format string and simplify.
	(PREAMBLE_LY, FRAGMENT_LY): Format string.
	(classic_lilypond_book_compatibility): Take key/value pair as
	parameter.
	Return key/value pair.
	(compose_ly): Rewritten, taking the snippet type as third parameter. 
	The default values are now set more sensible, and a `linewidth'
	option is no longer overwritten under some circumstances.

	* Documentation/user/music-glossary.tely: Replace all accented
	character macros with latin-1 codes.

2004-10-26  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* lily/music-function.cc (ly_make_music_function): when an
	argument predicate is markup?, the signature keyword becomes
	"markup" iso "scm".

	* lily/lexer.ll (music_function_type): new MUSIC_FUNCTION_*MARKUP*
	tokens, for functions which signatures contain "markup".

	* lily/parser.yy (Generic_prefix_music_scm): add treatment for new
	MUSIC_FUNCTION_*MARKUP* tokens.

2004-10-26  Jan Nieuwenhuizen  <janneke@gnu.org>
