@@ -1,3 +1,7 @@
+2004-10-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* lily/stencil-scheme.cc (LY_DEFINE): add ly:stencil-origin
+
 2004-10-28  Werner Lemberg  <wl@gnu.org>
 
 	* Documentation/user/music-glossary.tely: More fixes to improve
